--- a/_posts/2025-02-03-聚禾抖音.md
+++ b/_posts/2025-02-03-聚禾抖音.md
@@ -1,9 +1,10 @@
 ---
 title: 聚禾抖音
+description: 聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 ### 打开抖音扫码关注
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/douyin.jpg"/>
+<img class="image" alt="抖音号" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/douyin.jpg"/>
 <br/>
