--- a/_posts/2025-02-05-聚禾知乎.md
+++ b/_posts/2025-02-05-聚禾知乎.md
@@ -1,5 +1,6 @@
 ---
 title: 聚禾知乎
+description: 聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 ### 打开知乎扫码关注
@@ -7,5 +8,5 @@ title: 聚禾知乎
 #### [聚禾招商曹公子](https://www.zhihu.com/people/jx-leolian)
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/zhihu.png"/>
+<img class="image" alt="知乎" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/zhihu.png"/>
 <br/>
