--- a/_posts/2025-02-18-商学院赋能体系.md
+++ b/_posts/2025-02-18-商学院赋能体系.md
@@ -1,11 +1,12 @@
 ---
 title: 商学院赋能体系
 tags: 聚禾招商学院
+description: 聚禾文化 聚禾招商 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲 线上动销 培招会
 ---
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-18/photo1.png"/>
+<img class="image" alt="聚禾文化曹公子" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-18/photo1.png"/>
 
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-18/photo2.png"/>
+<img class="image" alt="聚禾文化曹公子" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-18/photo2.png"/>
 
 <br/>
