--- a/_posts/2025-02-01-怎么联系.md
+++ b/_posts/2025-02-01-怎么联系.md
@@ -1,9 +1,10 @@
 ---
 title: 怎么联系
+description: 聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 ### 打开微信添加好友
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/wecaht.jpg"/>
+<img class="image" alt="微信" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/wecaht.jpg"/>
 <br/>
