--- a/_posts/2025-02-04-聚禾视频号.md
+++ b/_posts/2025-02-04-聚禾视频号.md
@@ -1,9 +1,10 @@
 ---
 title: 聚禾视频号
+description: 聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 ### 打开微信扫码关注
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/shipinhao.jpg"/>
+<img class="image" alt="视频号" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/about/shipinhao.jpg"/>
 <br/>
