--- a/_posts/2025-02-11-导师班.md
+++ b/_posts/2025-02-11-导师班.md
@@ -1,13 +1,14 @@
 ---
 title: 导师班
 tags: 销讲 成交 招商导师
+description: 聚禾文化 聚禾招商 招商导师 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo1.png"/>
+<img class="image" alt="聚禾文化曹公子" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo1.png"/>
 
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo2.png"/>
+<img class="image" alt="曹公子" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo2.png"/>
 
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo3.png"/>
+<img class="image" alt="导师班" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-11/photo3.png"/>
 
 <br/>
