--- a/_posts/2025-02-17-起盘策划咨询.md
+++ b/_posts/2025-02-17-起盘策划咨询.md
@@ -1,8 +1,9 @@
 ---
 title: 起盘策划
 tags: 起盘策划 商业模式
+description: 聚禾文化 聚禾招商 辉哥 模式架构师 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-17/photo.png"/>
+<img class="image" alt="辉哥" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-17/photo.png"/>
 <br/>
