--- a/_posts/2025-02-19-曹公子介绍.md
+++ b/_posts/2025-02-19-曹公子介绍.md
@@ -1,8 +1,9 @@
 ---
 title: 曹公子介绍
 tags: 曹公子
+description: 聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 ---
 
 <br/>
-<img class="image" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-19/photo.jpg"/>
+<img class="image" alt="曹公子" title="聚禾招商" style="width: 100%; height: 100%; object-fit: cover;" src="/assets/resource/2025-02-19/photo.jpg"/>
 <br/>
